# language-learning-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  hermes_config.yaml  pyproject.toml
src/: __init__.py  cognates.json  livekit_stt.py  livekit_tts.py  prompts.py  scenarios.json  server.py  stt_service.py  tts_service.py  voice_agent.py
src/skills/conversation/: SKILL.md
src/skills/grammar/: SKILL.md
src/skills/hanviet/: SKILL.md
src/skills/pronunciation/: SKILL.md
tests/: test_cognates.py  test_prompts.py  test_server.py  test_stt.py  test_tts.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/livekit-token/: route.ts
web/src/app/api/voice/: route.ts
web/src/app/chat/: page.tsx
web/src/components/: ChatUI.tsx  LiveKitVoiceRoom.tsx  VoiceRecorder.tsx
web/src/lib/: api.ts  hooks.ts  index.ts  types.ts  utils.ts
